--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/google": "^1.2.3",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@vapi-ai/web": "^2.2.5",
     "ai": "^4.2.6",
@@ -20,6 +23,7 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
