--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.6.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
